--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,11 @@ services:
     name: mysite
     runtime: ruby
     plan: free
-    buildCommand: "./bin/render-build.sh"
+    buildCommand: "bundle install && bundle exec rails db:migrate"
     # preDeployCommand: "bundle exec rails db:migrate" # preDeployCommand only available on paid instance types
-    startCommand: "bundle exec rails server"
+    startCommand: "RAILS_SERVE_STATIC_FILES=true bundle exec rails server"
     envVars:
       - key: RAILS_MASTER_KEY
         sync: false
+      - key: RAILS_ENV
+        value: production
