--- a/render.yaml
+++ b/render.yaml
@@ -13,4 +13,4 @@ services:
       - key: RAILS_ENV
         value: production
       - key: RAILS_SERVE_STATIC_FILES
-        value: true
+        value: "true"
